--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../styles.css" />
-    <title>JavaScript Background Color Switcher</title>
+    <title>BackGround Color Switcher</title>
   </head>
   <body>
     <nav>
@@ -28,13 +28,14 @@
       <h1>Color Scheme Switcher</h1>
       <span class="button" id="grey"></span>
       <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
+      <span class="button" id="red"></span>
       <span class="button" id="yellow"></span>
+      <span class="button" id="blue"></span>
       <h2>
-        Try clicking on one of the colors above
+        CLICK ON THE ABOVE COLOR BOXES
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <script src="chaiaurcode.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
