--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -9,14 +9,10 @@
     <title>Your Local Time</title>
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      
-    </nav>
     <div class="center">
       <div id="banner"><span>Your local time</span></div>
       <div id="clock"></div>
     </div>
-    <script src="chaiaurcode.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
